Cocoa: app menu does now show before doing qApp::exec()

The reason is that we need to start [NSApplication run] before the
menus get properly initialized. This patch will make the event
dispatcher run nsapp once before spinning a modal session, if needed

Task-number: QTBUG-6627